# core

./: .gitignore  FIREBASE_GUIDE_TR.md  GSTREAMER_GUIDE_EN.md  GSTREAMER_GUIDE_TR.md  LICENSE  README.md  SYSTEM_ANALYSIS.md  future_work.md  progress.md
.github/workflows/: build.yml
Roadmap/: cross_platform_setup_guide.md  faz0.md  faz1.md  faz2.md  faz3.md  faz4.md  faz5.md  faz6.md  gstreamer_thinning_plan.md  issues_and_future_work.md  pi5_deployment_guide_tr.md  pi_deployement.md  ui_architecture.md  ui_issues.md
app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/commands/: audio.rs  auth.rs  capture.rs  encoder.rs  mod.rs  monitors.rs  network.rs  settings.rs  stream.rs  windows.rs
app/src-tauri/src/gstreamer/: mod.rs  path_setup.rs  pipeline.rs
app/src-tauri/src/utils/: capture_exclusion.rs  mod.rs  process.rs
app/src/i18n/: index.ts
app/src/screens/: ConnectionSetup.tsx  RoomDiscovery.tsx  StreamingBarApp.tsx
app/src/services/: firebase.ts  roomService.ts
app/src/stores/: connectionStore.ts  index.ts  roomStore.ts  settingsStore.ts  systemStore.ts
app/src/types/: ipc.ts  room.ts  settings.ts  stream.ts
src/analytics/: report_generator.py
src/receiver/: agent.py  benchmarker.py  mock_pi.py  requirements.txt
src/sender/: latency_tester.py
src/test/: test_sender.py
src/test/receiver/: agent.py  (+3 more)
(+23 files in other folders)
